--- a/c0223g1_html_jax_banking/index.html
+++ b/c0223g1_html_jax_banking/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>List of customers</title>
-    <link rel="stylesheet" href="/assets/bootstrap/v-5.3.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/assets//fontawesome/v-5.15.4/css/all.min.css">
-    <link rel="stylesheet" href="/assets/sweetalert2/sweetalert2.min.css">
+    <link rel="stylesheet" href="./assets/bootstrap/v-5.3.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./assets//fontawesome/v-5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="./assets/sweetalert2/sweetalert2.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
@@ -350,9 +350,9 @@
 
     </div>
 
-    <script src="/assets/jquery/jquery-3.6.4.min.js"></script>
-    <script src="/assets/bootstrap/v-5.3.0/js/bootstrap.bundle.min.js"></script>
-    <script src="/assets/sweetalert2/sweetalert2.all.min.js"></script>
+    <script src="./assets/jquery/jquery-3.6.4.min.js"></script>
+    <script src="./assets/bootstrap/v-5.3.0/js/bootstrap.bundle.min.js"></script>
+    <script src="./assets/sweetalert2/sweetalert2.all.min.js"></script>
 <script>
         let id = 1;
         let customerId = 0;
